# aqua_localization

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  dataset_request.yml
.github/workflows/: pages.yml
aqua_fusion/: CMakeLists.txt  package.xml
aqua_fusion/config/: bluerov2.yaml  mbes_slam.yaml  params.yaml  uuv_simulator.yaml
aqua_fusion/include/aqua_fusion/: loosely_coupled_fuser.hpp
aqua_fusion/launch/: fusion.launch.py
aqua_fusion/src/: fusion_node.cpp  loosely_coupled_fuser.cpp
aqua_fusion/test/: test_fusion_node_runtime.cpp  test_loosely_coupled_fuser.cpp
aqua_imu_loc/: CMakeLists.txt  package.xml
aqua_imu_loc/config/: aqualoc.yaml  bluerov2.yaml  depth_to_pressure.yaml  depth_to_pressure_uuv_simulator.yaml  mbes_slam.yaml  ntnu_fjord.yaml  params.yaml  scalar_to_pressure.yaml  scalar_to_pressure_ntnu.yaml  tank_dataset.yaml  uuv_simulator.yaml
aqua_imu_loc/include/aqua_imu_loc/: additive_ukf.hpp  imu_preprocessor.hpp  pressure_depth_converter.hpp  static_bias_initializer.hpp
aqua_imu_loc/launch/: depth_to_pressure.launch.py  imu_loc.launch.py  scalar_to_pressure.launch.py
aqua_imu_loc/src/: additive_ukf.cpp  depth_to_pressure_node.cpp  imu_loc_node.cpp  imu_preprocessor.cpp  pressure_depth_converter.cpp  scalar_to_pressure_node.cpp  static_bias_initializer.cpp
aqua_imu_loc/test/: test_additive_ukf.cpp  test_depth_to_pressure_node.cpp  test_imu_loc_node_runtime.cpp  test_imu_preprocessor.cpp  test_pressure_depth_converter.cpp  test_scalar_to_pressure_node.cpp  test_static_bias_initializer.cpp
aqua_localization/: CMakeLists.txt  package.xml
aqua_localization/launch/: aqua_localization.launch.py  ntnu_fjord_demo.launch.py  replay.launch.py
aqua_localization/rviz/: demo.rviz  mbes_loop_closure.rviz
aqua_localization/scripts/: analyze_tank_dvl_motion_prior.py  analyze_tank_dvl_prior_residuals.py  analyze_visual_drift.py  analyze_visual_motion_segments.py  analyze_visual_step_errors.py  apply_tank_dvl_motion_prior.py  aqua_slam_claim_readiness_report.py  aqua_slam_error_budget.py  aqua_slam_head_to_head_report.py  aqua_slam_progress_report.py  audit_mbes_loop_candidates.py  audit_mbes_loop_geometry.py  bench_fjord_1.sh  benchmark_gap_report.py  benchmark_manifest_report.py  calibrate_sonar_covariance.py  calibrate_visual_scale.py  check_3dgs_bag_ready.py  check_3dgs_training_ready.py  check_mbes_benchmark_ready.py  check_mbes_loop_audit_decisions.py  check_tank_aqua_slam_baseline_ready.py  compare_trajectories.py  compare_visual_status_timing.py  compare_visual_trajectories.py  convert_scalar_pressure_bag.py  convert_tank_dataset_bag.py  diagnose_yaw_frame.py  export_3dgs_dataset_pack.py  export_3dgs_frames.py  export_3dgs_manifest.py  export_3dgs_pack_pipeline.py  export_3dgs_transforms.py  export_mbes_loop_status.py  export_rosbag_odometry_tum.py  ingest_external_tum_result.py  ingest_tank_aqua_slam_baseline.py  inspect_bag_topics.py  lichtblick_screenshot.py  locate_tank_heldout_inputs.py  (+46 more)
aqua_localization/test/: test_analyze_tank_dvl_motion_prior.py  test_analyze_tank_dvl_prior_residuals.py  test_analyze_visual_drift.py  test_analyze_visual_motion_segments.py  test_analyze_visual_step_errors.py  test_apply_tank_dvl_motion_prior.py  test_aqua_slam_claim_readiness_report.py  test_aqua_slam_error_budget.py  test_aqua_slam_head_to_head_report.py  test_aqua_slam_progress_report.py  test_audit_mbes_loop_candidates.py  test_audit_mbes_loop_geometry.py  test_benchmark_gap_report.py  test_benchmark_manifest_report.py  test_calibrate_visual_scale.py  test_check_3dgs_bag_ready.py  test_check_3dgs_training_ready.py  test_check_mbes_benchmark_ready.py  test_check_mbes_loop_audit_decisions.py  test_check_tank_aqua_slam_baseline_ready.py  test_compare_trajectories.py  test_compare_visual_status_timing.py  test_compare_visual_trajectories.py  test_convert_scalar_pressure_bag.py  test_convert_tank_dataset_bag.py  test_diagnose_yaw_frame.py  test_export_3dgs_dataset_pack.py  test_export_3dgs_frames.py  test_export_3dgs_manifest.py  test_export_3dgs_pack_pipeline.py  test_export_3dgs_transforms.py  test_export_mbes_loop_status.py  test_export_rosbag_odometry_tum.py  test_ingest_external_tum_result.py  test_ingest_tank_aqua_slam_baseline.py  test_inspect_bag_topics.py  test_locate_tank_heldout_inputs.py  test_make_synthetic_sonar_bag.py  test_mbes_loop_benchmark_row.py  test_plot_mbes_loop_audit.py  (+33 more)
aqua_msgs/: CMakeLists.txt  package.xml
aqua_msgs/msg/: EstimatorStatus.msg  FusionStatus.msg  LoopClosureStatus.msg  PoseGraphKeyframe.msg  PoseGraphLoopConstraint.msg  ScanMatchingStatus.msg
aqua_pose_graph/: CMakeLists.txt  package.xml
aqua_pose_graph/config/: params.yaml
aqua_pose_graph/include/aqua_pose_graph/: pose_graph.hpp
aqua_pose_graph/launch/: pose_graph.launch.py
aqua_pose_graph/src/: pose_graph.cpp  pose_graph_node.cpp
aqua_pose_graph/test/: test_pose_graph.cpp
aqua_sonar_loc/: CMakeLists.txt  package.xml
aqua_sonar_loc/config/: bluerov2.yaml  mbes_loop_closure.yaml  mbes_slam.yaml  params.yaml  uuv_simulator.yaml
aqua_sonar_loc/include/aqua_sonar_loc/: mbes_loop_closure_frontend.hpp  scan_matcher.hpp  sonar_cloud_preprocessor.hpp
aqua_sonar_loc/launch/: sonar_loc.launch.py
aqua_sonar_loc/src/: mbes_loop_closure_frontend.cpp  mbes_loop_closure_node.cpp  scan_matcher.cpp  sonar_cloud_preprocessor.cpp  sonar_loc_node.cpp
aqua_sonar_loc/test/: test_mbes_loop_closure_frontend.cpp  test_mbes_loop_closure_node_runtime.cpp  test_scan_matcher.cpp  test_sonar_cloud_preprocessor.cpp  test_sonar_loc_node_runtime.cpp
datasets/: README.md  aqualoc_demo.md  mbes_slam_beach_pond_acquisition.md  mbes_slam_demo.md  ntnu_demo.md  synthetic_sonar_demo.md  tank_dataset_demo.md
docs/: architecture.md  index.html  mbes_loop_closure.md  mvp_checklist.md  public_dataset_candidates.md  public_demo_plan.md  public_launch_checklist.md
docs/benchmarks/: README.md  aqua_slam_claim_readiness.md  aqua_slam_comparison.md  aqua_slam_error_budget.md  aqua_slam_head_to_head.md  fjord_1.md  (+13 more)
(+11 files in other folders)
