<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aqua_localization</name>
  <version>0.1.0</version>
  <description>Metapackage for underwater IMU, pressure, sonar scan matching, and fusion localization.</description>
  <maintainer email="maintainer@example.com">aqua_localization maintainers</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>aqua_imu_loc</exec_depend>
  <exec_depend>aqua_sonar_loc</exec_depend>
  <exec_depend>aqua_fusion</exec_depend>
  <exec_depend>aqua_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
