<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aqua_pose_graph</name>
  <version>0.0.1</version>
  <description>
    Pose graph backend for aqua_localization. Maintains a SE(3) keyframe graph
    from upstream IMU/sonar odometry, exposes hooks for loop closure constraints,
    and publishes an optimized trajectory using g2o.
  </description>
  <maintainer email="ryohei.sasaki@map4.jp">Ryohei Sasaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>eigen</depend>
  <depend>libg2o</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
